<resources>
    <string name="app_name">myAngel</string>
    <string name="action_settings">主页</string>


    <string name="main_title">主标题</string>
    <string name="sub_title">副标题</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="zone">个人中心</string>
    <string name="weather">天气</string>
    <string name="offline">离线</string>
    <string name="theme">夜间</string>
    <string name="search">搜索</string>
    <string name="scan">扫一扫</string>
    <string name="setting">设置</string>
    <string name="change">修改</string>
    <string name="alldelete">全部删除</string>
    <string name="entersick">病史录入</string>
    <string name="save">保存修改</string>
    <string name="detele">删除记录</string>
    <string name="add">添加记录</string>

    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>


    <string name="record">记录时间:%1$s</string>
    <string name="xj_content">%1$d:%2$s</string>
</resources>
