<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change"
        android:icon="@mipmap/biz_main_menu_scan"
        android:orderInCategory="100"
        android:title="@string/change"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_alldelete"
        android:icon="@mipmap/biz_main_menu_setting"
        android:orderInCategory="100"
        android:title="@string/alldelete"
        app:showAsAction="never" />
</menu>