<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<include-->
    <!--android:id="@+id/layout_top"-->
    <!--layout="@layout/main_title"-->
    <!--android:focusable="true" />-->

    <nurse.little.com.mylittlenurse.view.ViewpageScroll
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/cal_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="20dip"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="2dip">

                    <TableRow>

                        <TextView
                            style="@style/dateStyle"
                            android:text="@string/sunday"
                            android:textColor="@color/canlendar_text_color" />

                        <TextView
                            style="@style/dateStyle"
                            android:text="@string/monday"
                            android:textColor="@color/canlendar_text_color" />

                        <TextView
                            style="@style/dateStyle"
                            android:text="@string/thesday"
                            android:textColor="@color/canlendar_text_color" />

                        <TextView
                            style="@style/dateStyle"
                            android:text="@string/wednesday"
                            android:textColor="@color/canlendar_text_color" />

                        <TextView
                            style="@style/dateStyle"
                            android:text="@string/thursday"
                            android:textColor="@color/canlendar_text_color" />

                        <TextView
                            style="@style/dateStyle"
                            android:text="@string/friday"
                            android:textColor="@color/canlendar_text_color" />

                        <TextView
                            style="@style/dateStyle"
                            android:text="@string/saturday"
                            android:textColor="@color/canlendar_text_color" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_cal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cal_week"
                android:orientation="vertical"></LinearLayout>

            <View
                android:id="@+id/lin_bg1"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/lin_cal"
                android:background="#f4f4f4" />

            <LinearLayout
                android:id="@+id/lin_content1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lin_bg1"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_att_upsch" />

                    <TextView
                        android:id="@+id/content_anpai"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="30dp"
                        android:text="已安排" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/dash_line" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/listview_content"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:divider="@null"
                    android:listSelector="@android:color/transparent" />
            </LinearLayout>

            <View
                android:id="@+id/lin_bg2"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_below="@+id/lin_content1"
                android:background="#f4f4f4" />

            <LinearLayout
                android:id="@+id/lin_content2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lin_bg2"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/content_repai_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_att_resch" />

                    <TextView
                        android:id="@+id/content_repai_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="30dp"
                        android:text="重新安排" />

                    <ImageView
                        android:id="@+id/att_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_att_more"
                        android:visibility="gone" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_toLeftOf="@+id/att_more"
                        android:text="更多"
                        android:textColor="#999999"
                        android:visibility="gone" />
                </RelativeLayout>

                <View
                    android:id="@+id/view_dash_line"
                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/dash_line" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/bo_listview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:listSelector="@android:color/transparent"></android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </RelativeLayout>
    </nurse.little.com.mylittlenurse.view.ViewpageScroll>

    <!--<ImageView-->
    <!--android:id="@+id/ic_guide"-->
    <!--android:layout_height="fill_parent"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:src="@drawable/ic_att_selectmonth"-->
    <!--android:scaleType="fitXY"-->
    <!--/>-->
</RelativeLayout>